Reword to avoid alliteration.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     <div class="row">
       <div class="col-12">
         <h1 class="center">ISTO-PWG Github Projects</h1>
-        <p class="justify">The <a href="http://www.pwg.org/ipp">ISTO Printer Working Group</a> maintains several projects on Github for the active workgroups and registries it maintains.</p>
+        <p class="justify">The <a href="http://www.pwg.org/ipp">ISTO Printer Working Group</a> has several projects on Github for the active workgroups and registries it maintains.</p>
         <p class="center"><a class="button" href="http://www.pwg.org">ISTO-PWG Web Site</a></p>
       </div>
     </div>
