Fix table styles for inline search.

--- a/pwg.html
+++ b/pwg.html
@@ -118,7 +118,7 @@
 	  <h1 class="center"><a name="JOINING">Joining the PWG</a></h1>
 	  <p class="justify">If your company is interested in becoming a member of the PWG, you should review the following procedure documents and complete and mail in the <a href="/pwg-logos/members.html#FORMS">PWG Membership Form</a>. If you have any questions about membership, don't hesitate to contact the <a href="mailto:chair@pwg.org">PWG Chair</a> or any of the other <a href="/chair/index.html">officers</a> of the PWG.</p>
 	  <p class="justify">Dues are payable to "The IEEE Standard and Technology Organization" via check or credit card.</p>
-	  <table summary="Membership Privileges">
+	  <table class="standard" summary="Membership Privileges">
 	    <caption>PWG Membership Privileges</caption>
 	    <thead>
 	      <tr>
