Sync up CSS changes.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <div class="col-12">
         <h1 class="center">ISTO-PWG Github Projects</h1>
         <p class="justify">The <a href="http://www.pwg.org/ipp">ISTO Printer Working Group</a> has several projects on Github for the active workgroups and registries it maintains.</p>
-        <p class="center"><a class="button" href="http://www.pwg.org">ISTO-PWG Web Site</a></p>
+        <p class="buttons"><a class="button" href="http://www.pwg.org">ISTO-PWG Web Site</a></p>
       </div>
     </div>
   </div>
@@ -24,24 +24,24 @@ layout: default
     <div class="col-6">
       <h2 class="center">ippsample</h2>
       <p class="justify">The ippsample project provides sample implementations of an IPP Client, Proxy, Server, and other tools. It is based on the <a href="http://www.cups.org">CUPS</a> source code and is maintained by the <a href="http://www.pwg.org/ipp">PWG IPP workgroup</a>.</p>
-      <p class="center"><a class="button" href="ippsample">Project Page</a></p>
+      <p class="buttons"><a class="button" href="ippsample">Project Page</a></p>
     </div>
     <div class="col-6">
       <h2 class="center">ippeveselfcert</h2>
       <p class="justify">The ippeveselfcert project contains the <a href="http://www.pwg.org/ipp/everywhere.html">IPP Everywhere<sup>&reg;</sup></a> self-certification tools.</p>
-      <p class="center"><a class="button" href="https://github.com/istopwg/ippeveselfcert">Project Page</a></p>
+      <p class="buttons"><a class="button" href="https://github.com/istopwg/ippeveselfcert">Project Page</a></p>
     </div>
   </div>
   <div class="row">
     <div class="col-6">
       <h2 class="center">ippregistry</h2>
       <p class="justify">The ippregistry project is used to maintain the <a href="http://www.iana.org/assignments/ipp-registrations/ipp-registrations.xml">IANA IPP Registry</a> as well as the <a href="http://www.pwg.org/ipp/ipp-registrations.xml">Pending IPP Registry</a> on the <a href="http://www.pwg.org/ipp">PWG IPP workgroup</a> home page.</p>
-      <p class="center"><a class="button" href="https://github.com/istopwg/ippregistry">Project Page</a></p>
+      <p class="buttons"><a class="button" href="ippregistry">Project Page</a></p>
     </div>
     <div class="col-6">
       <h2 class="center">pwg-semantic-model</h2>
       <p class="justify">The pwg-semantic-model project is used to maintain the <a href="http://www.pwg.org/sm/model.html">PWG Semantic Model</a> XML schema.</p>
-      <p class="center"><a class="button" href="https://github.com/istopwg/pwg-semantic-model">Project Page</a></p>
+      <p class="buttons"><a class="button" href="https://github.com/istopwg/pwg-semantic-model">Project Page</a></p>
     </div>
   </div>
 </div>
