--- a/ippsample/ipptransform3d.html
+++ b/ippsample/ipptransform3d.html
@@ -1,6 +1,7 @@
 ---
 title: ipptransform3d(1)
-layout: documentation
+layout: project
+project: ippsample
 ---
 
 <h2 class="title"><a name="NAME">Name</a></h2>
