--- a/ippsample/ippfind.html
+++ b/ippsample/ippfind.html
@@ -1,6 +1,7 @@
 ---
 title: ippfind(1)
-layout: documentation
+layout: project
+project: ippsample
 ---
 
 <h2 class="title"><a name="NAME">Name</a></h2>
