--- a/ippsample/ippserver.html
+++ b/ippsample/ippserver.html
@@ -1,6 +1,7 @@
 ---
 title: ippserver(8)
-layout: documentation
+layout: project
+project: ippsample
 ---
 
 <h2 class="title"><a name="NAME">Name</a></h2>
