--- a/ippsample/ipptool.html
+++ b/ippsample/ipptool.html
@@ -1,6 +1,7 @@
 ---
 title: ipptool(1)
-layout: documentation
+layout: project
+project: ippsample
 ---
 
 <h2 class="title"><a name="NAME">Name</a></h2>
