--- a/ippsample/ipptransform.html
+++ b/ippsample/ipptransform.html
@@ -1,6 +1,7 @@
 ---
 title: ipptransform(1)
-layout: documentation
+layout: project
+project: ippsample
 ---
 
 <h2 class="title"><a name="NAME">Name</a></h2>
