Update man pages and add missing ippdoclint man page.

--- a/ippsample/index.html
+++ b/ippsample/index.html
@@ -40,7 +40,7 @@ project: ippsample
 
 <p>The <code>ippproxy</code> program implements a generic IPP Proxy interface that allows you to connect a local IPP, PCL, or G-code printer to an IPP Infrastructure Printer such as the <code>ippserver</code> program.</p>
 
-<h3 id="ippserver">ippserver <a class="badge badge-primary" href="ippfind.html">Man Page</a></h3>
+<h3 id="ippserver">ippserver <a class="badge badge-primary" href="ippserver.html">Man Page</a></h3>
 
 <p>The <code>ippserver</code> program implements most IPP standards and is commonly used for prototyping and automated testing. It provides a generic IPP Printer interface that allows you to share printers locally or using the IPP Shared Infrastructure Extensions. Printers can be configured to use authentication and/or to provide transforms using the included or third-party programs. A scriptable web interface allows for a variety of automated testing opportunities.</p>
 
