--- a/ippsample/ippproxy.html
+++ b/ippsample/ippproxy.html
@@ -4,6 +4,7 @@ layout: project
 project: ippsample
 ---
 
+<h1 class="title">ippproxy(8)</h1>
 <h2 class="title"><a name="NAME">Name</a></h2>
 ippproxy - a simple ipp proxy client
 <h2 class="title"><a name="SYNOPSIS">Synopsis</a></h2>
