--- a/ippsample/ipptoolfile.html
+++ b/ippsample/ipptoolfile.html
@@ -4,6 +4,7 @@ layout: project
 project: ippsample
 ---
 
+<h1 class="title">ipptoolfile(5)</h1>
 <h2 class="title"><a name="NAME">Name</a></h2>
 ipptoolfile - ipptool file format
 <h2 class="title"><a name="DESCRIPTION">Description</a></h2>
