--- a/ippsample/ipptransform3d.html
+++ b/ippsample/ipptransform3d.html
@@ -4,6 +4,7 @@ layout: project
 project: ippsample
 ---
 
+<h1 class="title">ipptransform3d(1)</h1>
 <h2 class="title"><a name="NAME">Name</a></h2>
 ipptransform3d - convert 3d document data to alternate formats
 <h2 class="title"><a name="SYNOPSIS">Synopsis</a></h2>
