--- a/ippsample/ippfind.html
+++ b/ippsample/ippfind.html
@@ -4,6 +4,7 @@ layout: project
 project: ippsample
 ---
 
+<h1 class="title">ippfind(1)</h1>
 <h2 class="title"><a name="NAME">Name</a></h2>
 ippfind - find internet printing protocol printers
 <h2 class="title"><a name="SYNOPSIS">Synopsis</a></h2>
