--- a/ippsample/ippserver.html
+++ b/ippsample/ippserver.html
@@ -4,6 +4,7 @@ layout: project
 project: ippsample
 ---
 
+<h1 class="title">ippserver(8)</h1>
 <h2 class="title"><a name="NAME">Name</a></h2>
 ippserver - a simple ipp server
 <h2 class="title"><a name="SYNOPSIS">Synopsis</a></h2>
