--- a/ippsample/ipptransform.html
+++ b/ippsample/ipptransform.html
@@ -4,6 +4,7 @@ layout: project
 project: ippsample
 ---
 
+<h1 class="title">ipptransform(1)</h1>
 <h2 class="title"><a name="NAME">Name</a></h2>
 ipptransform - convert document data to alternate formats
 <h2 class="title"><a name="SYNOPSIS">Synopsis</a></h2>
