--- a/ippsample/index.html
+++ b/ippsample/index.html
@@ -63,6 +63,6 @@ project: ippsample
 Copyright © 2007-2018 by Apple Inc.<br>
 Copyright © 1997-2007 by Easy Software Products.</p>
 
-<p>This software is provided under the terms of the Apache License, Version 2.0. A copy of this license can be found in the file <a href="">LICENSE</a>. Additional legal information is provided in the file <a href="">NOTICE</a>.</p>
+<p>This software is provided under the terms of the Apache License, Version 2.0. A copy of this license can be found in the file <a href="https://github.com/istopwg/ippsample/blob/master/LICENSE">LICENSE</a>. Additional legal information is provided in the file <a href="https://github.com/istopwg/ippsample/blob/master/NOTICE">NOTICE</a>.</p>
 
 <p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</p>
