Clean up home page.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     <div class="card bg-light mb-3 shadow-sm" style="height: 100%;">
       <div class="card-body">
         <h2 class="card-title">IPP Everywhere&trade; Printer Self-Certification Tools</h2>
-        <p class="card-text">The <code>ippeveselfcert</code> project contains the source code for the <a href="https://www.pwg.org/ipp/everywhere.html">IPP Everywhere&trade;</a> printer self-certification tools.</p>
+        <p class="card-text">The <code>ippeveselfcert</code> project contains the tools for certifying printers against the IPP Everywhere™ standard.</p>
       </div>
       <div class="card-footer"><a class="btn btn-secondary btn-sm" href="/ippeveselfcert/index.html">Project Page</a></div>
     </div>
@@ -24,7 +24,7 @@ layout: default
     <div class="card bg-light mb-3 shadow-sm" style="height: 100%;">
       <div class="card-body">
         <h2 class="card-title">IPP Registry Tools</h2>
-        <p class="card-text">The <code>ippregistry</code> project provides the source code for the tools that maintain the <a href="https://www.iana.org/assignments/ipp-registrations/ipp-registrations.xml">IANA IPP Registry</a> and PWG 3D Print Job Ticket XML schema.</p>
+        <p class="card-text">The <code>ippregistry</code> project provides the tools that maintain the IANA IPP Registry, PWG Semantic Model schema, and strings files.</p>
       </div>
       <div class="card-footer"><a class="btn btn-secondary btn-sm" href="/ippregistry/index.html">Project Page</a></div>
     </div>
@@ -42,7 +42,7 @@ layout: default
     <div class="card bg-light mb-3 shadow-sm" style="height: 100%;">
       <div class="card-body">
         <h2 class="card-title">PWG Books</h2>
-        <p class="card-text">The <code>pwg-books</code> project provides PWG books and tutorials for PWG standards.</p>
+        <p class="card-text">The <code>pwg-books</code> project provides introductory books for PWG standards.</p>
       </div>
       <div class="card-footer"><a class="btn btn-secondary btn-sm" href="/pwg-books/index.html">Project Page</a></div>
     </div>
