Fix project templates.

--- a/github.html
+++ b/github.html
@@ -10,28 +10,28 @@ layout: bare
     <p><a class="btn btn-primary" href="https://github.com/istopwg" role="button">PWG Github Organization Page</a></p>
   </div>
 </div>
-<div class="row pwg-panel-sm pwg-alt-0">
+<div class="row pwg-panel pwg-alt-0">
   <div class="col-md-12 col-sm-12">
     <h2>IPP Everywhere&trade; Printer Self-Certification Tools</h2>
     <p>The <code>ippeveselfcert</code> project contains the tools for certifying printers against the IPP Everywhere™ standard.</p>
     <p><a class="btn btn-secondary btn-sm" href="/ippeveselfcert/index.html">Project Page</a></p>
   </div>
 </div>
-<div class="row pwg-panel-sm pwg-alt-1">
+<div class="row pwg-panel pwg-alt-1">
   <div class="col-md-12 col-sm-12">
     <h2>IPP Registry Tools</h2>
     <p>The <code>ippregistry</code> project provides the tools that maintain the IANA IPP Registry, PWG Semantic Model schema, and strings files.</p>
     <p><a class="btn btn-secondary btn-sm" href="/ippregistry/index.html">Project Page</a></p>
   </div>
 </div>
-<div class="row pwg-panel-sm pwg-alt-2">
+<div class="row pwg-panel pwg-alt-2">
   <div class="col-md-12 col-sm-12">
     <h2>IPP Sample Code</h2>
     <p>The <code>ippsample</code> project contains sample implementations of an IPP Client, Proxy, Server, and other tools.</p>
     <p><a class="btn btn-secondary btn-sm" href="/ippsample/index.html">Project Page</a></p>
   </div>
 </div>
-<div class="row pwg-panel-sm">
+<div class="row pwg-panel">
   <div class="col-md-12 col-sm-12">
     <h2>PWG Books</h2>
     <p>The <code>pwg-books</code> project provides introductory books for PWG standards.</p>
