Update documents and meeting page.

--- a/chair/meeting-info/november-2018-virtual.html
+++ b/chair/meeting-info/november-2018-virtual.html
@@ -67,13 +67,16 @@ layout: default
     </thead>
     <tbody>
         <tr>
-            <td rowspan="8"> November 14 <br>
+            <td rowspan="9"> November 14 <br>
             </td>
-            <td nowrap="nowrap"> 9:00 AM to 10:00 AM </td>
-            <td> <a href="https://ftp.pwg.org/pub/pwg/general/Plenary/pwg-plenary-november-2018.pdf" target="_blank"> PWG Plenary </a> </td>
+            <td nowrap="nowrap"> 9:00 AM to 10:15 AM </td>
+            <td>
+                <a href="https://ftp.pwg.org/pub/pwg/general/Plenary/pwg-plenary-november-2018.pdf" target="_blank"> PWG Plenary </a> &middot;
+                <a href="https://ftp.pwg.org/pub/pwg/liaison/mopria/Mopria-Alliance-October-2018.pdf" target="_blank"> Mopria Alliance 2018 Overview</a>
+            </td>
         </tr>
         <tr>
-            <td nowrap="nowrap"> 10:00 AM to 10:30 AM </td>
+            <td nowrap="nowrap"> 10:15 AM to 10:30 AM </td>
             <td> IPP WG : <a href="https://ftp.pwg.org/pub/pwg/ipp/slides/ipp-wg-agenda-november-18.pdf" target="_blank"> Status </a> </td>
         </tr>
         <tr>
@@ -88,8 +91,15 @@ layout: default
             <td> Break / Lunch </td>
         </tr>
         <tr>
-            <td nowrap="nowrap"> 11:30 AM to 1:00 PM </td>
-            <td> IPP WG : <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext2v20-20180904.pdf" target="_blank"> JPS2 v2.0 </a> </td>
+            <td nowrap="nowrap"> 11:30 AM to 12:15 PM </td>
+            <td> IPP WG : <a href="https://ftp.pwg.org/pub/pwg/ipp/slides/ipp-wg-agenda-november-18.pdf" target="_blank"> 3D Liaison Status Report and Discussion </a> </td>
+        </tr>
+        <tr>
+            <td nowrap="nowrap"> 12:15 PM to 1:00 PM </td>
+            <td> IPP WG :
+                <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp3d11-20180704-rev.pdf" target="_blank"> IPP 3D v1.1 </a> &middot;
+                <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20180704-rev.pdf" target="_blank"> PWG Safe G-Code </a>
+            </td>
         </tr>
         <tr>
             <td nowrap="nowrap"> 1:00 PM to 1:15 PM </td>
@@ -109,7 +119,7 @@ layout: default
 
 
         <tr>
-            <td rowspan="8"> November 15 </td>
+            <td rowspan="7"> November 15 </td>
             <td nowrap="nowrap"> 9:00 AM to 11:00 AM </td>
             <td> <a href="https://ftp.pwg.org/pub/pwg/ids/Presentation/2018-11-15-IDS-F2F.pdf" target="_blank">IDS WG : Status and Discussion</a> </td>
         </tr>
@@ -118,15 +128,8 @@ layout: default
             <td> Break / Lunch </td>
         </tr>
         <tr>
-            <td nowrap="nowrap"> 11:30 AM to 12:15 PM </td>
-            <td> IPP WG : <a href="https://ftp.pwg.org/pub/pwg/ipp/slides/ipp-wg-agenda-november-18.pdf" target="_blank"> 3D Liaison Status Report and Discussion </a> </td>
-        </tr>
-        <tr>
-            <td nowrap="nowrap"> 12:15 PM to 1:00 PM </td>
-            <td> IPP WG :
-                <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp3d11-20180704-rev.pdf" target="_blank"> IPP 3D v1.1 </a> &middot;
-                <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20180704-rev.pdf" target="_blank"> PWG Safe G-Code </a>
-            </td>
+            <td nowrap="nowrap"> 11:30 AM to 1:00 PM </td>
+            <td> IPP WG : <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext2v20-20180904.pdf" target="_blank"> JPS2 v2.0 </a> </td>
         </tr>
         <tr>
             <td nowrap="nowrap"> 1:00 PM to 1:15 PM </td>
